FlightPath 6.x Changelog
========================

2023-04-09
  Made a small change to AdvisingScreen.  In draw_course_row(), there was always a random number added
  to the end of the checkbox (and hidden element) for a course row.  Added what that random number was to the $render array,
  so other modules can target the toggleSelect() function.  Also added other similar ids and names to the $render array per row for
  future-proofing.
      

2023-03-31
  Added a "minimum_passing_grade" setting, rather than hard-coding "D" for default min grade requirements.  This
  fixed a bug where for schools that use D- as a grade, courses were not filling in when they should.
  

2023-03-29
  Modified Course::meets_min_grade_requirement_of to automatically exclude failing or withdrew grades.


2023-03-28
  Changed fp_url_get_contents() to make use of the superior fp_http_request() function.
  
  Fixed a bug where sometimes transfer credits do not show subject and course num if they were
  created from a split sub.
  

2023-03-23
  Added CSV to acceptable file formats (by default) when uploading student files.


2023-03-15
  Added new function to misc.inc to easily get all terms in a range.
  
  Added new system setting for public file extensions we will accept.


2023-02-22
  Minor warning fix in audit module.
  

2023-02-17
  Slight change to wording on Admin Console.
    

2023-02-16
  Fixed by in system.module, where when we load courses and save to our course cache file, we were not excluding the excluded courses.
  This was causing a bug in certain situations.
  
  Added code to FlightPath object's function to load entire course catalog-- it was included *excluded* courses by default, which was throwing
  off the subject select menu in the Courses Added by Advisor group.
  
  Modified system.install to include more indexes on courses and draft_courses table.
  

2023-02-09