@@ -1,6 +1,11 @@
 FlightPath 6.x Changelog
 ========================
 
+2023-04-11
+  Changed the way that the Degree submit button is rendered, to make it easier for other modules to modify
+  using hook_content_alter.
+  
+
 2023-04-09
   Made a small change to AdvisingScreen.  In draw_course_row(), there was always a random number added
   to the end of the checkbox (and hidden element) for a course row.  Added what that random number was to the $render array,
